--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -27,5 +27,11 @@
         <artifactId>spring-context</artifactId>
         <version>4.2.5.RELEASE</version>
     </dependency>
+    
+    <dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>5.1.38</version>
+</dependency>
   </dependencies>
 </project>
