--- a/spring/src/main/resources/jdbc.properties
+++ b/spring/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
-jdbc.driverClassName=org.hsqldb.jdbcDriver
-jdbc.url=jdbc:hsqldb:hsql://production:9002
-jdbc.username=sa
+jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/travel
+jdbc.username=root
 jdbc.password=root
